Wed Jun 18 08:00:17 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:

          Added missing calls to ACE_Allocator::bind()/find().  They are
          necessary for retrieving persistent data from the backing
          store.

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/WriteDataContainer.h:

          Take into account LIFESPAN QoS policy value when reenqueuing
          data for TRANSIENT_LOCAL, TRANSIENT and PERSISTENT DURABILITY
          enabled writes.

        * tests/DCPS/PersistentDurability/run_test.pl:

          Unlink the durability backing store file before and after
          running the test so that stale data does not skew the results.

Tue Jun 17 23:59:42 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:
        * dds/DCPS/DataDurabilityCache.h:

          Use an ACE_Hash_Map_With_Allocator_T<> map instead of the "_Ex"
          version just in case the base address for persistent durability
          support changes between process runs.
        
          Allocate the map itself with the allocator so that its state
          (size, etc) is reflected in the backing store in the persistent
          case.

Tue Jun 17 22:22:25 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/PersistentDurability/Writer.cpp:
        * tests/DCPS/PersistentDurability/publisher.cpp:

          Applied TransientDurability test changes below to the
          PersistentDurability test.

Tue Jun 17 22:11:56 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * tests/DCPS/TransientDurability/Writer.cpp
          (num_instances_per_writer):

          Increased this constant from 1 to 2.  Increases concurrency in
          the test, and addresses subscriber waiting indefinitely for data
          to arrive.

        * tests/DCPS/TransientDurability/publisher.cpp:
